2008-02-18  David Gilbert  <david.gilbert@object-refinery.com>

    Bug 1880114:
    * org/jfree/chart/renderer/xy/VectorRenderer.java
    (drawItem): Modify arrow-head for plot orientation.

2008-02-18  David Gilbert  <david.gilbert@object-refinery.com>

    Patch 1871902 by Martin Hoeller:
    * org/jfree/chart/plot/PolarPlot.java
    (DEFAULT_ANGLE_TICK_UNIT_SIZE): New field,
    (angleTickUnit): Likewise,
    (PolarPlot(XYDataset, ValueAxis, PolarItemRenderer)): Initialise 
    angleTickUnit,
    (getAngleTickUnit): New method,
    (setAngleTickUnit): Likewise,
    (refreshAngleTicks): Likewise,
    (draw): Refresh angle tick list before drawing.

2008-02-15  David Gilbert  <david.gilbert@object-refinery.com>

    * org/jfree/data/DefaultKeyedValue.java
    (DefaultKeyedValue(Comparable, Number)): Check for null key.

2008-02-15  David Gilbert  <david.gilbert@object-refinery.com>

    Patch 1868745:
    * source/org/jfree/chart/axis/LogAxis.java
    (refreshTicksHorizontal): Adjust label anchor according to axis position,
    (refreshTicksVertical): Likewise.

2008-02-15  David Gilbert  <david.gilbert@object-refinery.com>

    Patch 1873328:
    * source/org/jfree/chart/util/RelativeDateFormat.java
    (showZeroHours): New field,
    (positivePrefix): Likewise,
    (RelativeDateFormat(long)): Initialise new fields,
    (getShowZeroHours): New method,
    (setShowZeroHours): Likewise,
    (getPositivePrefix): Likewise,
    (setPositivePrefix): Likewise,
    (format): Apply positive prefix, and fix formatting for negative values,
    (equals): Handle new fields,
    (hashCode): Use positivePrefix.
    
2008-02-15  David Gilbert  <david.gilbert@object-refinery.com>

    Bug 1873160:
    * source/org/jfree/chart/plot/DialPlot.java
    (draw): Fix clipping issues.

2008-02-14  David Gilbert  <david.gilbert@object-refinery.com>

    Bug 1892419:
    * source/org/jfree/chart/axis/LogAxis.java
    (LogAxis(String)): Change default number of minor ticks.
